--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   "dependencies": {
     "@mdi/js": "7.3.67",
     "@mdi/react": "1.6.1",
-   
     "axios": "^1.6.7",
     "movie-trailer": "3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hls-player": "3.0.7",
+    "react-hls-player": "^3.0.7",
     "react-router-dom": "5.3.4",
     "react-scripts": "5.0.1",
     "react-youtube": "10.1.0",
